--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: esparkman/gridsome-starter-netlify-netlifycms-tailwindcss
+  repo: ideas24h/gridsome-rr
 
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
