--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -18,3 +18,6 @@ collections:
       - {label: "Publish Date", name: "date", widget: "date"}
       - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Pros", name: "pros", widget: "markdown"}
+      - {label: "Contras", name: "contras", widget: "markdown"}
+
