--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,5 +1,5 @@
 backend:
-  name: github
+  name: git-gateway
   repo: ideas24h/gridsome-rr
   accept_roles: #optional - accepts all users if left out
     - admin
