--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: github
   repo: ideas24h/gridsome-rr
+  branch: vigilabebes
 
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
